# mutui

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.LGPL-2.1  README.md  THIRD-PARTY-LICENSES.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
crates/mutui-common/: Cargo.toml
crates/mutui-common/src/: lib.rs
crates/mutui-daemon/: Cargo.toml  build.rs
crates/mutui-daemon/src/: library.rs  main.rs  mpris.rs  mpv.rs  playlist.rs  podcasts.rs  queue.rs  search.rs  server.rs  tray.rs
crates/mutui-tui/: Cargo.toml
crates/mutui-tui/src/: app.rs  client.rs  config.rs  main.rs  theme.rs
crates/mutui-tui/src/ui/: library.rs  mod.rs  now_playing.rs  player_bar.rs  playlists.rs  podcasts.rs  queue.rs  queue_panel.rs  search.rs
docs/: index.html
packaging/: .SRCINFO  PKGBUILD  mutui.desktop
scripts/: install-desktop-entry.sh  install.sh  preview-landing.sh  release-major.sh  release-minor.sh  release-patch.sh  release-version.sh
