[workspace]
members = [
    "crates/mutui-common",
    "crates/mutui-daemon",
    "crates/mutui-tui",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
mutui-common = { path = "crates/mutui-common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
