[package]
name = "mutui-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mutuid"
path = "src/main.rs"

[[bin]]
name = "mutui-tray"
path = "src/tray.rs"
required-features = ["tray-linux"]

[features]
default = []
tray-linux = ["dep:ksni"]

[dependencies]
mutui-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
libmpv2 = { version = "5", default-features = false, features = [] }
log = "0.4"
env_logger = "0.11"
ksni = { version = "0.3", optional = true }
lofty = "0.22"
zbus = "5.14"
zvariant = "5.10"
